--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,7 +1,46 @@
+@font-face {
+    font-family: Metric;
+    font-weight: normal;
+    src: url('../fonts/Metric-Regular.otf') format('opentype');
+}
+@font-face {
+    font-family: Metric;
+    font-weight: bold;
+    src: url('../fonts/Metric-Bold.otf') format('opentype');
+}
+@font-face {
+    font-family: Metric;
+    font-weight: lighter;
+    src: url('../fonts/Metric-Light.otf') format('opentype');
+}
+@font-face {
+    font-family: Metric;
+    font-weight: 500;
+    src: url('../fonts/Metric-Medium.otf') format('opentype');
+}
+@font-face {
+    font-family: Metric;
+    font-weight: 600;
+    src: url('../fonts/Metric-Semibold.otf') format('opentype');
+}
+@font-face {
+    font-family: Metric;
+    font-weight: 100;
+    src: url('../fonts/Metric-Thin.otf') format('opentype');
+}
+@font-face {
+    font-family: Metric;
+    font-weight: bold;
+    font-style: italic;
+    src: url('../fonts/Metric-LightItalic.otf') format('opentype');
+}
+
 body {
     margin: 0;
     padding: 0;
+    font-family: Metric;
 }
+
 .container {
     height: 1920px;
     width: 1080px;
@@ -13,7 +52,6 @@ body {
 
 .section {
     font-size: 20px;
-    font-family: sans-serif;
 
     &--header {
         grid-column: 1 / -1;
