--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -7,8 +7,7 @@
 
 .footerItem {
   font-size: 12px;
-  font-family: sans-serif;
-  font-weight: 100;
+  font-weight: lighter;
   letter-spacing: 2px;
   color: white; }
   .footerItem--name {
@@ -16,8 +15,6 @@
     grid-row: 1 / -1;
     align-self: center;
     justify-self: center; }
-    .footerItem--name--text {
-      text-align: center; }
   .footerItem--logo {
     grid-column: 2 / 3;
     grid-row: 1 / -1;
@@ -28,5 +25,3 @@
     grid-row: 1 / -1;
     align-self: center;
     justify-self: center; }
-    .footerItem--website--text {
-      text-align: center; }
