--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,9 +1,9 @@
 .footer {
-  background-color: black;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 60px;
-  grid-row-gap: 3px; }
+  grid-row-gap: 3px;
+  background-color: black; }
 
 .footerItem {
   font-size: 12px;
