--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -2,14 +2,15 @@
   display: grid;
   grid-template-columns: 600px 216px 264px;
   grid-template-rows: 290px 60px;
-  grid-row-gap: 3px;
-  background-color: #c29a78; }
+  grid-row-gap: 3px; }
 
 .headerItem {
   font-size: 20px;
   font-weight: 500;
   letter-spacing: 4px;
-  color: white; }
+  color: white;
+  background-color: #c29a78;
+  width: 100%; }
   .headerItem--logo {
     grid-column: 1 / -1;
     grid-row: 1 / 2; }
