--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,7 +3,6 @@
     grid-template-columns: 600px 216px 264px;
     grid-template-rows: 290px 60px;
     grid-row-gap: 3px;
-    background-color: rgba(194, 154, 120, 1);
 }
 
 .headerItem {
@@ -11,6 +10,8 @@
     font-weight: 500;
     letter-spacing: 4px;
     color: white;
+    background-color: rgba(194, 154, 120, 1);
+    width: 100%;
 
     &--logo {
         grid-column: 1 / -1;
