added menu icon for menu section

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -10,7 +10,8 @@
   letter-spacing: 4px;
   color: white;
   background-color: #c29a78;
-  width: 100%; }
+  width: 100%;
+  text-align: center; }
   .headerItem--logo {
     grid-column: 1 / -1;
     grid-row: 1 / 2; }
