--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,6 +12,7 @@
     color: white;
     background-color: rgba(194, 154, 120, 1);
     width: 100%;
+    text-align: center;
 
     &--logo {
         grid-column: 1 / -1;
