--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -46,8 +46,47 @@ body {
     width: 1080px;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 350px 200px auto 60px;
-    grid-row-gap: 10px;
+    grid-template-rows: 355px 8px 120px auto 60px;
+    grid-row-gap: 3px;
+}
+
+.section {
+    font-size: 20px;
+
+    &--header {
+        grid-column: 1 / -1;
+        grid-row: 1 / 2;
+    }
+
+    &--breakline {
+        grid-column: 1 / -1;
+        grid-row: 2 / 3;
+        background-color: black;
+    }
+
+    &--menu {
+        grid-column: 1 / -1;
+        grid-row: 3 / 4;
+    }
+
+    &--main {
+        grid-column: 1 / -1;
+        grid-row: 4 / 5;
+    }
+
+    &--footer {
+        grid-column: 1 / -1;
+        grid-row: 5 / 6;
+    }
+}
+
+/*.container {
+    height: 1920px;
+    width: 1080px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 355px 120px auto 60px;
+    grid-row-gap: 5px;
 }
 
 .section {
@@ -72,4 +111,4 @@ body {
         grid-column: 1 / -1;
         grid-row: 4 / 5;
     }
-}
+}*/
