--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -2,15 +2,16 @@
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 120px;
-  grid-row-gap: 5px;
-  grid-column-gap: 5px; }
+  grid-gap: 5px;
+  background-color: white; }
 
 .menuItem {
   font-size: 12px;
   font-weight: lighter;
   letter-spacing: 2px;
   color: white;
-  background-color: #5f6662; }
+  background-color: #5f6662;
+  text-align: center; }
   .menuItem--apartments {
     grid-column: 1 / 2;
     grid-row: 1 / -1; }
@@ -23,3 +24,7 @@
   .menuItem--gallery {
     grid-column: 4 / 5;
     grid-row: 1 / -1; }
+
+.menuText {
+  margin: 0;
+  font-size: 22px; }
