--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,4 @@
+@import '../sass/variables.scss';
 .header {
     display: grid;
     grid-template-columns: 600px 216px 264px;
@@ -10,7 +11,7 @@
     font-weight: 500;
     letter-spacing: 4px;
     color: white;
-    background-color: rgba(194, 154, 120, 1);
+    background-color: $color-light-grey;
     width: 100%;
     text-align: center;
 
