--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -17,16 +17,10 @@
     grid-row: 1 / 2; }
   .headerItem--welcome {
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    align-self: center;
-    justify-self: end; }
+    grid-row: 2 / 3; }
   .headerItem--time {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    align-self: center;
-    justify-self: center; }
+    grid-row: 2 / 3; }
   .headerItem--date {
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
-    align-self: center;
-    justify-self: center; }
+    grid-row: 2 / 3; }
