--- a/src/components/apartments/Apartments.css
+++ b/src/components/apartments/Apartments.css
@@ -62,3 +62,31 @@
     -webkit-transform: none;
     transform: none;
     opacity: 1; } }
+
+.apt--container {
+  background-color: #eee;
+  display: grid;
+  grid-template-columns: 200px 880px;
+  grid-template-rows: 1367px; }
+
+.aptsection {
+  font-size: 30px; }
+  .aptsection--sidebar {
+    background: linear-gradient(black 35%, #c29a78);
+    text-align: center;
+    color: white;
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    font-size: 70px;
+    letter-spacing: 10px;
+    writing-mode: vertical-rl;
+    /* vertical text */
+    line-height: 5rem;
+    /* center in div */
+    transform: rotate(180deg);
+    /* spin to orient as required */
+    text-transform: uppercase; }
+  .aptsection--main {
+    background-color: grey;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3; }
