added apartment list

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -16,11 +16,14 @@
     grid-column: 1 / -1;
     grid-row: 1 / 2; }
   .headerItem--welcome {
+    padding-top: 3px;
     grid-column: 1 / 2;
     grid-row: 2 / 3; }
   .headerItem--time {
+    padding-top: 3px;
     grid-column: 2 / 3;
     grid-row: 2 / 3; }
   .headerItem--date {
+    padding-top: 3px;
     grid-column: 3 / 4;
     grid-row: 2 / 3; }
