--- a/src/components/apartments/Apartments.css
+++ b/src/components/apartments/Apartments.css
@@ -85,8 +85,30 @@
     /* center in div */
     transform: rotate(180deg);
     /* spin to orient as required */
-    text-transform: uppercase; }
-  .aptsection--main {
-    background-color: grey;
+    text-transform: uppercase;
+    -webkit-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
+    z-index: 99; }
+  .aptsection--list {
     grid-row: 1 / 2;
-    grid-column: 2 / 3; }
+    grid-column: 2 / 3;
+    overflow-y: scroll;
+    /*vertically scrollable div*/
+    height: 1367px; }
+    .aptsection--list--each {
+      height: 455.6px;
+      position: relative; }
+      .aptsection--list--each--name {
+        color: white;
+        background-color: black;
+        opacity: 0.7;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 80px;
+        letter-spacing: 15px;
+        line-height: 3em; }
+        .aptsection--list--each--name span {
+          margin-top: 30px; }
