--- a/src/components/apartments/Apartments.scss
+++ b/src/components/apartments/Apartments.scss
@@ -3,9 +3,7 @@
 
 .apt--container {
     background-color: #eee;
-
     display: grid;
-
     grid-template-columns: 200px 880px;
     grid-template-rows: 1367px;
 }
@@ -25,14 +23,39 @@
         line-height: 5rem; /* center in div */
         transform: rotate(180deg); /* spin to orient as required */
         text-transform: uppercase;
+
+        -webkit-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
+        -moz-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
+        box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
+        z-index: 99;
     }
 
-    &--main {
-        background-color: grey;
+    &--list {
         grid-row: 1 / 2;
         grid-column: 2 / 3;
-    }
-}
 
-.aptsection--sidebar--text {
+        overflow-y: scroll; /*vertically scrollable div*/
+        height: 1367px;
+
+        &--each {
+            height: 455.6px;
+            position: relative;
+            &--name {
+                color: $color-white;
+                background-color: $color-black;
+                opacity: 0.7;
+                text-align: center;
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 80px;
+                letter-spacing: 15px;
+                line-height: 3em;
+
+                span {
+                    margin-top: 30px;
+                }
+            }
+        }
+    }
 }
