--- a/src/components/apartments/Apartments.css
+++ b/src/components/apartments/Apartments.css
@@ -89,7 +89,7 @@
     -webkit-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
     -moz-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
     box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
-    z-index: 99; }
+    z-index: 10; }
   .aptsection--list {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -100,15 +100,18 @@
       height: 455.6px;
       position: relative; }
       .aptsection--list--each--name {
+        width: 100%;
+        height: 80px;
+        position: absolute;
+        bottom: 0;
         color: white;
         background-color: black;
         opacity: 0.7;
         text-align: center;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-        height: 80px;
         letter-spacing: 15px;
         line-height: 3em; }
-        .aptsection--list--each--name span {
-          margin-top: 30px; }
+
+.sidebar--logo {
+  position: fixed;
+  z-index: 20;
+  bottom: 63px; }
