--- a/src/components/apartments/Apartments.scss
+++ b/src/components/apartments/Apartments.scss
@@ -23,11 +23,10 @@
         line-height: 5rem; /* center in div */
         transform: rotate(180deg); /* spin to orient as required */
         text-transform: uppercase;
-
         -webkit-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
         -moz-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
         box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
-        z-index: 99;
+        z-index: 10;
     }
 
     &--list {
@@ -41,21 +40,23 @@
             height: 455.6px;
             position: relative;
             &--name {
+                width: 100%;
+                height: 80px;
+                position: absolute;
+                bottom: 0;
                 color: $color-white;
                 background-color: $color-black;
                 opacity: 0.7;
                 text-align: center;
-                position: absolute;
-                bottom: 0;
-                width: 100%;
-                height: 80px;
                 letter-spacing: 15px;
                 line-height: 3em;
-
-                span {
-                    margin-top: 30px;
-                }
             }
         }
     }
+}
+
+.sidebar--logo {
+    position: fixed;
+    z-index: 20;
+    bottom: 63px;
 }
