--- a/src/components/apartments/Apartments.css
+++ b/src/components/apartments/Apartments.css
@@ -66,7 +66,7 @@
 .apt--container {
   background-color: #eee;
   display: grid;
-  grid-template-columns: 200px 880px;
+  grid-template-columns: 880px;
   grid-template-rows: 1367px; }
 
 .aptsection {
@@ -92,7 +92,7 @@
     z-index: 10; }
   .aptsection--list {
     grid-row: 1 / 2;
-    grid-column: 2 / 3;
+    grid-column: 1 / -1;
     overflow-y: scroll;
     /*vertically scrollable div*/
     height: 1367px; }
@@ -110,8 +110,3 @@
         text-align: center;
         letter-spacing: 15px;
         line-height: 3em; }
-
-.sidebar--logo {
-  position: fixed;
-  z-index: 20;
-  bottom: 63px; }
