--- a/src/components/apartments/Apartments.scss
+++ b/src/components/apartments/Apartments.scss
@@ -4,7 +4,7 @@
 .apt--container {
     background-color: #eee;
     display: grid;
-    grid-template-columns: 200px 880px;
+    grid-template-columns: 880px;
     grid-template-rows: 1367px;
 }
 
@@ -31,7 +31,7 @@
 
     &--list {
         grid-row: 1 / 2;
-        grid-column: 2 / 3;
+        grid-column: 1 / -1;
 
         overflow-y: scroll; /*vertically scrollable div*/
         height: 1367px;
@@ -53,10 +53,4 @@
             }
         }
     }
-}
-
-.sidebar--logo {
-    position: fixed;
-    z-index: 20;
-    bottom: 63px;
 }
