added arrow up and down, and apartment description

--- a/src/components/sass/variables.scss
+++ b/src/components/sass/variables.scss
@@ -2,3 +2,4 @@ $color-light-grey: rgba(194, 154, 120, 1);
 $color-dark-grey: rgba(95, 102, 98, 1);
 $color-white: white;
 $color-black: black;
+$color-arrow-grey: rgba(141, 142, 144, 1);
