--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -99,6 +99,12 @@ body {
     }
 }
 
+.menu--shadow {
+    position: fixed;
+    z-index: 20;
+    top: 490px;
+}
+
 .sidebar--logo {
     position: fixed;
     z-index: 20;
