--- a/src/components/apartments/ApartmentDetail.css
+++ b/src/components/apartments/ApartmentDetail.css
@@ -17,7 +17,21 @@
   .aptdetail--gallery {
     grid-column: 1 / -1;
     grid-row: 2 / 3;
-    background-color: #8d8e90; }
+    background-color: #8d8e90;
+    position: relative; }
+    .aptdetail--gallery--name {
+      width: 100%;
+      height: 70px;
+      position: absolute;
+      bottom: 0;
+      transform: translateY(-100px);
+      font-size: 28px;
+      color: white;
+      background-color: black;
+      opacity: 0.7;
+      text-align: center;
+      letter-spacing: 15px;
+      line-height: 3em; }
   .aptdetail--description {
     grid-column: 1 / -1;
     grid-row: 3 / 4;
