--- a/src/components/apartments/ApartmentDetail.scss
+++ b/src/components/apartments/ApartmentDetail.scss
@@ -24,6 +24,21 @@
         grid-column: 1 / -1;
         grid-row: 2 / 3;
         background-color: $color-arrow-grey;
+        position: relative;
+        &--name {
+            width: 100%;
+            height: 70px;
+            position: absolute;
+            bottom: 0;
+            transform: translateY(-100px);
+            font-size: 28px;
+            color: $color-white;
+            background-color: $color-black;
+            opacity: 0.7;
+            text-align: center;
+            letter-spacing: 15px;
+            line-height: 3em;
+        }
     }
 
     &--description {
