added animiation for up and down for apartment detail page

--- a/src/components/sass/animation.scss
+++ b/src/components/sass/animation.scss
@@ -4,6 +4,18 @@
     animation-timing-function: ease-in;
 }
 
+.section-up-animation {
+    animation-name: moveInBottom;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in;
+}
+
+.section-down-animation {
+    animation-name: moveInUp;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in;
+}
+
 .home-section-animation {
     -webkit-animation-name: rotateIn;
     animation-name: rotateIn;
@@ -11,6 +23,17 @@
     animation-duration: 1.5s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
+}
+
+@keyframes moveInUp {
+    0% {
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes moveInBottom {
