--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -3,6 +3,16 @@
   animation-duration: 1s;
   animation-timing-function: ease-in; }
 
+.section-up-animation {
+  animation-name: moveInBottom;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in; }
+
+.section-down-animation {
+  animation-name: moveInUp;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in; }
+
 .home-section-animation {
   -webkit-animation-name: rotateIn;
   animation-name: rotateIn;
@@ -10,6 +20,14 @@
   animation-duration: 1.5s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both; }
+
+@keyframes moveInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
 @keyframes moveInBottom {
   0% {
