fixed position absoulte to fixed issue

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -86,14 +86,15 @@ body {
     z-index: 10; }
 
 .menu--shadow {
-  position: fixed;
+  position: absolute;
   z-index: 20;
   top: 490px; }
 
 .sidebar--logo {
-  position: fixed;
+  position: absolute;
   z-index: 20;
-  bottom: 63px; }
+  bottom: 0px;
+  transform: translateY(57px); }
 
 .loadingContainer {
   height: 1920px;
