added feature list page and fixed sider bar logo position issue

--- a/src/components/apartments/ApartmentDetail.css
+++ b/src/components/apartments/ApartmentDetail.css
@@ -41,7 +41,8 @@
     letter-spacing: 2px; }
     .aptdetail--description--name {
       text-align: center;
-      font-size: 28px; }
+      font-size: 28px;
+      text-transform: uppercase; }
     .aptdetail--description--contact {
       text-align: left;
       font-size: 20px; }
