--- a/src/components/apartments/ApartmentDetail.scss
+++ b/src/components/apartments/ApartmentDetail.scss
@@ -51,6 +51,7 @@
         &--name {
             text-align: center;
             font-size: 28px;
+            text-transform: uppercase;
         }
         &--contact {
             text-align: left;
