--- a/src/components/apartments/Apartments.scss
+++ b/src/components/apartments/Apartments.scss
@@ -50,6 +50,7 @@
                 text-align: center;
                 letter-spacing: 15px;
                 line-height: 3em;
+                text-transform: uppercase;
             }
         }
     }
