--- a/src/components/App.css
+++ b/src/components/App.css
@@ -45,7 +45,8 @@ body {
   display: grid;
   grid-template-columns: 200px repeat(1, 1fr);
   grid-template-rows: 353px 8px 120px auto 60px;
-  grid-row-gap: 3px; }
+  grid-row-gap: 3px;
+  position: relative; }
 
 .section {
   font-size: 20px; }
@@ -93,8 +94,7 @@ body {
 .sidebar--logo {
   position: absolute;
   z-index: 20;
-  bottom: 0px;
-  transform: translateY(57px); }
+  bottom: 63px; }
 
 .loadingContainer {
   height: 1920px;
