--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -49,6 +49,7 @@ body {
     grid-template-columns: 200px repeat(1, 1fr);
     grid-template-rows: 353px 8px 120px auto 60px;
     grid-row-gap: 3px;
+    position: relative;
 }
 
 .section {
@@ -108,8 +109,7 @@ body {
 .sidebar--logo {
     position: absolute;
     z-index: 20;
-    bottom: 0px;
-    transform: translateY(57px);
+    bottom: 63px;
 }
 
 .loadingContainer {
