--- a/src/components/gallery/Gallery.css
+++ b/src/components/gallery/Gallery.css
@@ -90,12 +90,24 @@
 .galleryitem--image {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
-  background-color: Orange; }
+  position: relative; }
+  .galleryitem--image--name {
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    bottom: 0;
+    color: white;
+    background-color: black;
+    opacity: 0.7;
+    text-align: center;
+    letter-spacing: 15px;
+    line-height: 2.7em;
+    text-transform: uppercase;
+    font-size: 30px; }
 
 .galleryitem--list {
   grid-column: 1 / -1;
-  grid-row: 2 / 3;
-  background-color: Red; }
+  grid-row: 2 / 3; }
 
 .list--container {
   display: flex;
