--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -12,13 +12,26 @@
     &--image {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
-        background-color: Orange;
+        position: relative;
+        &--name {
+            width: 100%;
+            height: 70px;
+            position: absolute;
+            bottom: 0;
+            color: $color-white;
+            background-color: $color-black;
+            opacity: 0.7;
+            text-align: center;
+            letter-spacing: 15px;
+            line-height: 2.7em;
+            text-transform: uppercase;
+            font-size: 30px;
+        }
     }
 
     &--list {
         grid-column: 1 / -1;
         grid-row: 2 / 3;
-        background-color: Red;
     }
 }
 
