--- a/src/components/maps/Maps.css
+++ b/src/components/maps/Maps.css
@@ -80,3 +80,9 @@
     -webkit-transform: none;
     transform: none;
     opacity: 1; } }
+
+.map--container {
+  background-color: #8d8e90;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1367px; }
