--- a/src/components/sass/animation.scss
+++ b/src/components/sass/animation.scss
@@ -16,6 +16,12 @@
     animation-timing-function: ease-in;
 }
 
+.section-left-animation {
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+}
+
 .home-section-animation {
     -webkit-animation-name: rotateIn;
     animation-name: rotateIn;
