--- a/src/components/videos/RestVideos.scss
+++ b/src/components/videos/RestVideos.scss
@@ -1,3 +1,5 @@
+@import '../sass/variables.scss';
+
 .restvideoContainer {
     display: grid;
     grid-template-columns: 1080px;
@@ -14,7 +16,7 @@
     &--promotion {
         grid-column: 1 / -1;
         grid-row: 2 / 3;
-        background-color: green;
+        background-color: $color-dark-grey;
         color: white;
         text-align: center;
         font-size: 60px;
