--- a/src/components/apartments/ApartmentDetail.scss
+++ b/src/components/apartments/ApartmentDetail.scss
@@ -46,19 +46,42 @@
         grid-column: 1 / -1;
         grid-row: 3 / 4;
         background-color: $color-arrow-grey;
-        padding-left: 60px;
-        padding-right: 60px;
-        letter-spacing: 2px;
-        &--name {
-            text-align: center;
-            font-size: 28px;
-            text-transform: uppercase;
-        }
-        &--contact {
-            text-align: left;
-            font-size: 20px;
-            span {
-                font-weight: 500;
+
+        &--container {
+            display: grid;
+            grid-template-columns: 60px 760px 60px;
+            grid-template-rows: 350px auto;
+            grid-row-gap: 3px;
+            background-color: $color-white;
+            line-height: 130%;
+            letter-spacing: 2px;
+            &--desc {
+                grid-column: 2 / 3;
+                grid-row: 1 / 2;
+                background-color: $color-arrow-grey;
+            }
+            &--contact {
+                grid-column: 2 / 3;
+                grid-row: 2 / 3;
+                text-align: left;
+                font-size: 28px;
+                line-height: 150%;
+                background-color: $color-arrow-grey;
+
+                span {
+                    font-weight: 500;
+                }
+            }
+            &--leftWhite {
+                background-color: $color-arrow-grey;
+                grid-column: 1 / 2;
+                grid-row: 1 / 3;
+            }
+
+            &--rightWhite {
+                background-color: $color-arrow-grey;
+                grid-column: 3 / 4;
+                grid-row: 1 / 3;
             }
         }
     }
