--- a/src/components/App.css
+++ b/src/components/App.css
@@ -69,8 +69,8 @@ body {
   .section--sidebar {
     grid-column: 1 / 2;
     grid-row: 4 / 5;
+    font-weight: 500;
     background: linear-gradient(black 35%, #c29a78);
-    text-align: center;
     color: white;
     font-size: 70px;
     letter-spacing: 10px;
