--- a/src/components/around/Around.scss
+++ b/src/components/around/Around.scss
@@ -4,7 +4,7 @@
     width: 880px;
     height: 1367px;
     display: grid;
-    grid-template-rows: repeat(auto, 250px);
+    grid-template-rows: auto
     grid-template-columns: repeat(1, 1fr);
     overflow: auto;
 }
