--- a/src/components/around/SectionList.scss
+++ b/src/components/around/SectionList.scss
@@ -1,9 +1,10 @@
 @import '../sass/variables.scss';
 .sectionlist--container {
     background-color: #eee;
+    grid-row-gap: 3px;
 
     display: grid;
-    grid-template-rows: 75px 77px 1140px 75px;
+    grid-template-rows: 74px 76px 1134px 74px;
     grid-template-columns: 880px;
     overflow: auto;
 }
@@ -12,24 +13,77 @@
     &--up {
         grid-column: 1 / -1;
         grid-row: 1 / 2;
-        background-color: red;
     }
 
     &--heading {
         grid-column: 1 / -1;
         grid-row: 2 / 3;
-        background-color: blue;
+        background-color: $color-light-grey;
+        color: white;
+        text-align: center;
+        font-size: 60px;
+        text-transform: uppercase;
+        font-weight: 500;
+        letter-spacing: 3px;
+        padding-top: 13px;
     }
 
     &--list {
         grid-column: 1 / -1;
         grid-row: 3 / 4;
-        background-color: yellow;
+        width: 880px;
+        height: 1134px;
+
+        display: grid;
+        grid-template-rows: auto;
+        grid-template-columns: repeat(1, 1fr);
+        overflow: auto;
+        grid-row-gap: 3px;
+        grid-column-gap: 3px;
+
+        align-content: flex-start;
+        background-color: $color-white;
+
+        &--item {
+            grid-column: 1 / -1;
+            height: 186.5px;
+            display: grid;
+            grid-template-rows: 186.5px;
+            grid-template-columns: 340px 537px;
+            grid-column-gap: 3px;
+
+            &--image {
+                grid-column: 1 / 2;
+                grid-row: 1 / -1;
+                background-color: $color-arrow-grey;
+            }
+            &--name {
+                grid-column: 2 / 3;
+                grid-row: 1 / -1;
+                background-color: $color-arrow-grey;
+                padding-left: 30px;
+                padding-top: 60px;
+                color: $color-white;
+                font-size: 30px;
+                letter-spacing: 3px;
+                text-transform: uppercase;
+                &--heading {
+                    font-weight: 500;
+                }
+                &--subheading {
+                }
+            }
+        }
     }
 
     &--down {
         grid-column: 1 / -1;
         grid-row: 4 / 5;
-        background-color: orange;
+    }
+
+    &--arrow {
+        background-color: $color-arrow-grey;
+        text-align: center;
+        padding-top: 1.5em;
     }
 }
