--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -87,7 +87,7 @@ body {
         font-weight: 500;
         background: linear-gradient($color-black 35%, $color-light-grey);
         color: white;
-        font-size: 70px;
+        font-size: 60px;
         letter-spacing: 10px;
         writing-mode: vertical-rl; /* vertical text */
         line-height: 5rem; /* center in div */
@@ -97,6 +97,22 @@ body {
         -moz-box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
         box-shadow: -7px 0px 5px 0px rgba(0, 0, 0, 0.6);
         z-index: 10;
+    }
+}
+
+.section--sidebar--backButton {
+    position: absolute;
+    width: 200px;
+    height: 150px;
+    z-index: 11;
+    color: white;
+    transform: translateY(520px);
+    text-align: center;
+    p {
+        margin: 0;
+        font-size: 22px;
+        text-transform: uppercase;
+        letter-spacing: 3px;
     }
 }
 
