--- a/src/components/App.css
+++ b/src/components/App.css
@@ -89,16 +89,18 @@ body {
 .section--sidebar--backButton {
   position: absolute;
   width: 200px;
-  height: 150px;
+  height: 123px;
   z-index: 11;
   color: white;
   transform: translateY(520px);
-  text-align: center; }
+  text-align: center;
+  border-bottom: 3px solid white; }
   .section--sidebar--backButton p {
     margin: 0;
-    font-size: 22px;
+    font-size: 20px;
     text-transform: uppercase;
-    letter-spacing: 3px; }
+    letter-spacing: 3px;
+    font-weight: 500; }
 
 .menu--shadow {
   position: absolute;
